--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 *
 {
     outline: none;
+    transition-duration: 150ms;
+}
+body
+{
+    overflow: hidden;
+    width:100vw;
+    height: 100vh;
+    touch-action: none;
+    transition-property:background-color;
 }
 #main
 {
@@ -33,33 +42,30 @@
     color:white;
     transition-property: transform,opacity;
     opacity:1;
-    transition-duration: 150ms;
+    
     animation: entered 400ms;
     
-}
-.tiles:focus-visible
-{
-    border:none;
 }
 @keyframes entered {
     from
     {
         background-color: rgb(255, 255, 255);
         opacity:0;
-        
     }
     to
     {
         opacity:1;
     }
 }
-body
+#restart
 {
-    background-color: #a29385;
-
-    background: linear-gradient(#a29385, rgb(0, 0, 0));
-    overflow: hidden;
-    width:100vw;
-    height: 100vh;
-    touch-action: none;
+    position:absolute;
+    z-index: 2;
+    width:100%;
+    height:100%;
+    opacity:0.4;
+    text-align: center;
+    font-size: 60px;
+    border-radius: 30px;
+    border:none;
 }
